--- a/config/model_repeats/biokg/transh.yaml
+++ b/config/model_repeats/biokg/transh.yaml
@@ -1,9 +1,9 @@
-type: baseline
+type: model_repeat
 
 dataset: Hetionet
 
 model: 
-  name: ComplEx
+  name: BioKG
   embedding_dim: 50
 
 optimizer:
@@ -17,6 +17,6 @@ train:
   create_inverse: False
 
 save:
-  path: ~/kgem_in_drug_discovery_result/baseline/complex_hetionet
+  path: ~/kgem_in_drug_discovery_result/model_repeats/transh_biokg
 
 seed: 42
