--- a/config/hpo_relation/biokg/rotate.yaml
+++ b/config/hpo_relation/biokg/rotate.yaml
@@ -1,4 +1,4 @@
-type: hpo
+type: hpo_r
 
 dataset: BioKG
 
@@ -34,6 +34,6 @@ hpo:
 
 save:
   study_name: rotate_biokg_hpo_tpe
-  path: ~/kgem_in_drug_discovery_result/hpo/rotate_biokg_tpe
+  path: ~/kgem_in_drug_discovery_result/hpo_relation/rotate_biokg_tpe
 
 seed: 42
