--- a/config/hpo_relation/hetionet/rotate.yaml
+++ b/config/hpo_relation/hetionet/rotate.yaml
@@ -1,6 +1,6 @@
-type: hpo
+type: hpo_r
 
-dataset: BioKG
+dataset: Hetionet
 
 model: 
   name: RotatE
@@ -33,7 +33,7 @@ hpo:
     step: 10
 
 save:
-  study_name: rotate_biokg_hpo_tpe
-  path: ~/kgem_in_drug_discovery_result/hpo/rotate_biokg_tpe
+  study_name: rotate_hetionet_hpo_tpe
+  path: ~/kgem_in_drug_discovery_result/hpo_relation/rotate_hetionet_tpe
 
 seed: 42
