--- a/config/hpo_relation/hetionet/transe.yaml
+++ b/config/hpo_relation/hetionet/transe.yaml
@@ -1,9 +1,9 @@
-type: hpo
+type: hpo_r
 
-dataset: BioKG
+dataset: Hetionet
 
 model: 
-  name: RotatE
+  name: TransE
   embedding_dim: 50
 
 optimizer:
@@ -33,7 +33,7 @@ hpo:
     step: 10
 
 save:
-  study_name: rotate_biokg_hpo_tpe
-  path: ~/kgem_in_drug_discovery_result/hpo/rotate_biokg_tpe
+  study_name: transe_hetionet_hpo_tpe
+  path: ~/kgem_in_drug_discovery_result/hpo_relation/transe_hetionet_tpe
 
 seed: 42
