--- a/config/baseline/biokg/transh.yaml
+++ b/config/baseline/biokg/transh.yaml
@@ -17,6 +17,6 @@ train:
   create_inverse: False
 
 save:
-  path: ~/kgem_in_drug_discovery_result/baseline/transh_biokg
+  path: ./results/baseline/transh_biokg
 
 seed: 42
