--- a/config/baseline/hetionet/distmult.yaml
+++ b/config/baseline/hetionet/distmult.yaml
@@ -17,6 +17,6 @@ train:
   create_inverse: False
 
 save:
-  path: ~/kgem_in_drug_discovery_result/baseline/distmult_hetionet
+  path: ./results/baseline/distmult_hetionet
 
 seed: 42
