--- a/config/datasplits/biokg/transh.yaml
+++ b/config/datasplits/biokg/transh.yaml
@@ -17,6 +17,6 @@ train:
   create_inverse: False
 
 save:
-  path: ~/kgem_in_drug_discovery_result/data_repeats/transh_biokg
+  path: ./results/data_repeats/transh_biokg
 
 seed: 42
