--- a/config/hpo/biokg/complex.yaml
+++ b/config/hpo/biokg/complex.yaml
@@ -34,6 +34,6 @@ hpo:
 
 save:
   study_name: complex_biokg_hpo_tpe
-  path: ~/kgem_in_drug_discovery_result/hpo/complex_biokg_tpe
+  path: ./results/hpo/complex_biokg_tpe
 
 seed: 42
