--- a/config/hpo/biokg/transe.yaml
+++ b/config/hpo/biokg/transe.yaml
@@ -34,6 +34,6 @@ hpo:
 
 save:
   study_name: transe_biokg_hpo_tpe
-  path: ~/kgem_in_drug_discovery_result/hpo/transe_biokg_tpe
+  path: ./results/hpo/transe_biokg_tpe
 
 seed: 42
