--- a/config/model_repeats/hetionet/transh.yaml
+++ b/config/model_repeats/hetionet/transh.yaml
@@ -17,6 +17,6 @@ train:
   create_inverse: False
 
 save:
-  path: ~/kgem_in_drug_discovery_result/model_repeats/transh_hetionet
+  path: ./results/model_repeats/transh_hetionet
 
 seed: 42
